Upgrade to bootstrap 5

--- a/apps/legacy/src/app/views/pages/home.hbs
+++ b/apps/legacy/src/app/views/pages/home.hbs
@@ -1,5 +1,5 @@
 <div class="container-fluid pt-3">
-    <div class="jumbotron">
+    <div class="p-5 mb-4 bg-light rounded-3">
         <div class="container">
             <h1 class="display-4 text-center text-primary">About our Community</h1>
             <p class="lead">7th Ranger Group is an international Arma 3 Milsim community based in Europe, but with
@@ -17,14 +17,11 @@
 </div>
 
 <div class="container pb-3">
-    <picture>
-        <source data-srcset="images/group.webp" type="image/webp">
-        <img class="w-100 lazyload" data-src="images/group.png" alt="promo image">
-    </picture>
+    <img class="w-100 lazyload" data-src="images/group.webp" alt="promo image">
 </div>
 
 <div class="container-fluid pt-3">
-    <div class="jumbotron">
+    <div class="p-5 mb-4 bg-light rounded-3">
         <div class="container">
             <h1 class="display-4 text-center text-primary">Our Operations</h1>
             <p class="lead text-center">Wednesdays at 19:00 CE(S)T and Saturdays at 20:00 CE(S)T</p>
@@ -35,11 +32,11 @@
 <div class="container">
     <div class="row">
         <div class="card mt-0 mb-3 mx-3 col-sm">
-            <div class="row no-gutters">
+            <div class="row h-100">
                 <div class="col-md-3 d-flex justify-content-center align-items-center text-primary p-3">
                     <i class="fa-solid fa-code fa-4x"></i>
                 </div>
-                <div class="col-md-9">
+                <div class="col-md-9 align-self-center">
                     <div class="card-body">
                         <h5 class="card-title text-primary">Mission framework</h5>
                         <p class="card-text">In-house created custom Mission Framework to allow for diverse, immersive
@@ -49,11 +46,11 @@
             </div>
         </div>
         <div class="card mt-0 mb-3 mx-3 col-sm">
-            <div class="row no-gutters">
+            <div class="row h-100">
                 <div class="col-md-3 d-flex justify-content-center align-items-center text-primary p-3">
                     <i class="fa-solid fa-hands-helping fa-4x"></i>
                 </div>
-                <div class="col-md-9">
+                <div class="col-md-9 align-self-center">
                     <div class="card-body">
                         <h5 class="card-title text-primary">Training sessions</h5>
                         <p class="card-text">Weekly and demand based Training Sessions. Including Rotary Training and
@@ -65,11 +62,11 @@
     </div>
     <div class="row">
         <div class="card m-3 col-sm">
-            <div class="row no-gutters">
+            <div class="row h-100">
                 <div class="col-md-3 d-flex justify-content-center align-items-center text-primary p-3">
                     <i class="fa-solid fa-lightbulb fa-4x"></i>
                 </div>
-                <div class="col-md-9">
+                <div class="col-md-9 align-self-center">
                     <div class="card-body">
                         <h5 class="card-title text-primary">Enhanced AI</h5>
                         <p class="card-text">Custom AI enhancements to allow for a better coordinated and responsive AI
@@ -79,11 +76,11 @@
             </div>
         </div>
         <div class="card m-3 col-sm">
-            <div class="row no-gutters">
+            <div class="row h-100">
                 <div class="col-md-3 d-flex justify-content-center align-items-center text-primary p-3">
                     <i class="fa-solid fa-sitemap fa-4x"></i>
                 </div>
-                <div class="col-md-9">
+                <div class="col-md-9 align-self-center">
                     <div class="card-body">
                         <h5 class="card-title text-primary">Structured environment</h5>
                         <p class="card-text">Prepared loadouts, streamlined customizations and structured procedure for
@@ -96,7 +93,7 @@
 </div>
 
 <div class="container-fluid pt-3">
-    <div class="jumbotron">
+    <div class="p-5 mb-4 bg-light rounded-3">
         <div class="container">
             <div class="row">
                 <div class="col-md-5 d-flex justify-content-center flex-column">
@@ -121,14 +118,11 @@
 </div>
 
 <div class="container pb-3">
-    <picture>
-        <source data-srcset="images/heli.webp" type="image/webp">
-        <img class="w-100 lazyload" data-src="images/heli.png" alt="promo image">
-    </picture>
+    <img class="w-100 lazyload" data-src="images/heli.webp" alt="promo image">
 </div>
 
 <div class="container-fluid pt-3">
-    <div class="jumbotron">
+    <div class="p-5 mb-4 bg-light rounded-3">
         <div class="container">
             <h1 class="display-4 text-center text-primary">Our Resources</h1>
             <p class="lead">The unit has multiple resources at its disposal to ensure smooth operations. These resources
@@ -143,11 +137,11 @@
 <div class="container">
     <div class="row">
         <div class="card mt-0 mb-3 mx-3 col-sm">
-            <div class="row no-gutters">
+            <div class="row h-100">
                 <div class="col-md-3 d-flex justify-content-center align-items-center text-primary p-3">
                     <i class="fa-solid fa-cloud-download-alt fa-4x"></i>
                 </div>
-                <div class="col-md-9">
+                <div class="col-md-9 align-self-center">
                     <div class="card-body">
                         <h5 class="card-title text-primary">Arma3Sync repository</h5>
                         <p class="card-text">We are using Arma3 Sync and our own repository for easy mod distribution
@@ -157,11 +151,11 @@
             </div>
         </div>
         <div class="card mt-0 mb-3 mx-3 col-sm">
-            <div class="row no-gutters">
+            <div class="row h-100">
                 <div class="col-md-3 d-flex justify-content-center align-items-center text-primary p-3">
                     <i class="fa-solid fa-heartbeat fa-4x"></i>
                 </div>
-                <div class="col-md-9">
+                <div class="col-md-9 align-self-center">
                     <div class="card-body">
                         <h5 class="card-title text-primary">Custom medical system</h5>
                         <p class="card-text">We are using a Custom Medical System based on ACE3 Basic Medical System
@@ -173,11 +167,11 @@
     </div>
     <div class="row">
         <div class="card m-3 col-sm">
-            <div class="row no-gutters">
+            <div class="row h-100">
                 <div class="col-md-3 d-flex justify-content-center align-items-center text-primary p-3">
                     <i class="fa-solid fa-cogs fa-4x"></i>
                 </div>
-                <div class="col-md-9">
+                <div class="col-md-9 align-self-center">
                     <div class="card-body">
                         <h5 class="card-title text-primary">Custom AI modifications</h5>
                         <p class="card-text">We are using AI modifications and equipment balancing to further increase
@@ -187,11 +181,11 @@
             </div>
         </div>
         <div class="card m-3 col-sm">
-            <div class="row no-gutters">
+            <div class="row h-100">
                 <div class="col-md-3 d-flex justify-content-center align-items-center text-primary p-3">
                     <i class="fa-solid fa-user-clock fa-4x"></i>
                 </div>
-                <div class="col-md-9">
+                <div class="col-md-9 align-self-center">
                     <div class="card-body">
                         <h5 class="card-title text-primary">Quality of life</h5>
                         <p class="card-text">We have multiple custom modifications to improve the quality of life by
@@ -204,7 +198,7 @@
 </div>
 
 <div class="container-fluid pt-3">
-    <div class="jumbotron">
+    <div class="p-5 mb-4 bg-light rounded-3">
         <div class="container">
             <div class="row">
                 <div class="col-md-8">
@@ -228,14 +222,11 @@
 </div>
 
 <div class="container pb-3">
-    <picture>
-        <source data-srcset="images/hummvee.webp" type="image/webp">
-        <img class="w-100 lazyload" data-src="images/hummvee.png" alt="promo image">
-    </picture>
+    <img class="w-100 lazyload" data-src="images/hummvee.webp" alt="promo image">
 </div>
 
 <div class="container-fluid pt-3">
-    <div class="jumbotron">
+    <div class="p-5 mb-4 bg-light rounded-3">
         <div class="container text-center">
             <h1 class="display-4 text-primary text-center">How to Join</h1>
             <p class="lead text-center">We are always looking for friendly, mature and respectful players. If you want
@@ -251,14 +242,11 @@
 </div>
 
 <div class="container pb-3">
-    <picture>
-        <source data-srcset="images/boom.webp" type="image/webp">
-        <img class="w-100 lazyload" data-src="images/boom.png" alt="promo image">
-    </picture>
+    <img class="w-100 lazyload" data-src="images/boom.webp" alt="promo image">
 </div>
 
 <div class="container-fluid pt-3">
-    <div class="jumbotron">
+    <div class="p-5 mb-4 bg-light rounded-3">
         <div class="container">
             <h1 class="display-4 text-center text-primary">Would you like to know more?</h1>
             <p class="lead text-center">Feel free to drop by on our Discord or Teamspeak (ts.7th-Ranger.com) if you have
