--- a/apps/legacy/src/app/views/pages/users/edit.hbs
+++ b/apps/legacy/src/app/views/pages/users/edit.hbs
@@ -2,8 +2,8 @@
     <h1>Edit user: {{user_.name}}</h1>
 
     <form method="post">
-        <div class="form-group">
-            <label for="enjinUser-input"><i class="fa-solid fa-globe"></i> Enjin user</label>
+        <div class="form-group mb-3">
+            <label class="form-label" for="enjinUser-input"><i class="fa-solid fa-globe"></i> Enjin user</label>
             <select class="form-control" id="enjinUser-input" name="enjinUser">
                 <option value="">None</option>
                 {{#each enjinUsers}}
@@ -13,8 +13,8 @@
                 {{/each}}
             </select>
         </div>
-        <div class="form-group">
-            <label for="ts3User-input"><i class="fa-brands fa-teamspeak"></i> Teamspeak user</label>
+        <div class="form-group mb-3">
+            <label class="form-label" for="ts3User-input"><i class="fa-brands fa-teamspeak"></i> Teamspeak user</label>
             <select class="form-control" id="ts3User-input" name="ts3User">
                 <option value="">None</option>
                 {{#each ts3Users}}
@@ -24,8 +24,8 @@
                 {{/each}}
             </select>
         </div>
-        <div class="form-group">
-            <label for="rank-input">Rank (synced using Enjin)</label>
+        <div class="form-group mb-3">
+            <label class="form-label" for="rank-input">Rank (synced using Enjin)</label>
             <select class="form-control" id="rank-input" name="rank" disabled>
                 <option value="">None</option>
                 {{#each ranks}}
@@ -35,8 +35,8 @@
                 {{/each}}
             </select>
         </div>
-        <div class="form-group">
-            <label for="roles-select">Roles (synced using Enjin)</label>
+        <div class="form-group mb-3">
+            <label class="form-label" for="roles-select">Roles (synced using Enjin)</label>
             <div class="input-group flex-nowrap w-100">
                 <select name="roles" data-width="100%" id="roles-select" class="selectpicker" multiple
                         data-live-search="true" disabled>
@@ -46,8 +46,8 @@
                 </select>
             </div>
         </div>
-        <div class="form-group">
-            <label for="badges-select">Badges (synced using Enjin)</label>
+        <div class="form-group mb-3">
+            <label class="form-label" for="badges-select">Badges (synced using Enjin)</label>
             <div class="input-group flex-nowrap w-100">
                 <select name="badges" data-width="100%" id="badges-select" class="selectpicker" multiple
                         data-live-search="true" disabled>
