--- a/apps/legacy/src/app/views/layout.hbs
+++ b/apps/legacy/src/app/views/layout.hbs
@@ -6,10 +6,7 @@
 <body>
 <div class="content">
     <div class="banner container-fluid">
-        <picture>
-            <source srcset="images/banner.webp" type="image/webp">
-            <img class="w-100" src="images/banner.png" alt="banner image">
-        </picture>
+        <img src="images/banner.webp" alt="banner image">
     </div>
 
     {{>navbar}}
