--- a/apps/legacy/src/app/views/pages/users/index.hbs
+++ b/apps/legacy/src/app/views/pages/users/index.hbs
@@ -2,7 +2,7 @@
     <div class="d-flex justify-content-between align-items-center">
         <h1>Users ({{users.length}})</h1>
         <div class="d-flex">
-            <a class="btn btn-info mr-3" href="/users/link">
+            <a class="btn btn-info me-3" href="/users/link">
                 Link
                 <i class="fa-solid fa-link"></i>
             </a>
