Remove Enjin connection

--- a/apps/legacy/src/app/views/pages/user.hbs
+++ b/apps/legacy/src/app/views/pages/user.hbs
@@ -11,7 +11,7 @@
         Account links
     </h1>
 
-    <p>Please select your Enjin and Teamspeak accounts, this is used for synchronization of your rank and roles.</p>
+    <p>Please select your Teamspeak account, this is used for synchronization of your rank and roles.</p>
 
     <div class="row">
         <div class="input-group flex-nowrap col-md-4">
