--- a/apps/legacy/src/app/views/pages/users/link.hbs
+++ b/apps/legacy/src/app/views/pages/users/link.hbs
@@ -1,7 +1,7 @@
 <div class="container pt-3">
     <h1>Link new user</h1>
 
-    <p>Create a new link between Discord, Enjin and Teamspeak.</p>
+    <p>Create a new link between Discord and Teamspeak.</p>
 
     <form method="post">
         <div class="form-group mb-3">
@@ -11,17 +11,6 @@
                 {{#each discordUsers}}
                     <option value="{{this.user.id}}">
                         {{this.user.username}} #{{this.user.discriminator}}
-                    </option>
-                {{/each}}
-            </select>
-        </div>
-        <div class="form-group mb-3">
-            <label class="form-label" for="enjinUser-input"><i class="fa-solid fa-globe"></i> Enjin user</label>
-            <select class="form-control" id="enjinUser-input" name="enjinUser" required>
-                <option value="">None</option>
-                {{#each enjinUsers}}
-                    <option value="{{this.key}}">
-                        {{this.username}} ({{this.key}})
                     </option>
                 {{/each}}
             </select>
