--- a/apps/legacy/src/app/views/pages/ranks/index.hbs
+++ b/apps/legacy/src/app/views/pages/ranks/index.hbs
@@ -23,18 +23,18 @@
                     <!--                        <img width="25px" src="uploads/{{this.image}}" alt="{{this.name}} image" />-->
                     <!--                    </td>-->
                     <td class="align-middle">
-                        {{#if this.teamspeakRank}}
-                            {{this.teamspeakRank.name}} (#{{this.teamspeakRank.id}})
-                        {{else}}
-                            None
-                        {{/if}}
+                        {{#each ../tsRanks}}
+                            {{#ifCond ../this.teamspeakRank.id 'streq' this.sgid}}
+                                {{../this.name}} (#{{../this.sgid}})
+                            {{/ifCond}}
+                        {{/each}}
                     </td>
                     <td class="align-middle">
-                        {{#if this.discordRank}}
-                            ... (#)
-                        {{else}}
-                            None
-                        {{/if}}
+                        {{#each ../discordRoles}}
+                            {{#ifCond ../this.discordRole 'streq' this.id}}
+                                {{../this.name}} (#{{../this.id}})
+                            {{/ifCond}}
+                        {{/each}}
                     </td>
                     {{#hasPermission ../user 'EDIT_RANKS'}}
                         <td class="text-right align-middle">
