--- a/apps/legacy/src/app/views/pages/users/edit.hbs
+++ b/apps/legacy/src/app/views/pages/users/edit.hbs
@@ -26,7 +26,7 @@
         </div>
         <div class="form-group mb-3">
             <label class="form-label" for="rank-input">Rank</label>
-            <select class="form-control" id="rank-input" name="rank" disabled>
+            <select class="form-control" id="rank-input" name="rank">
                 <option value="">None</option>
                 {{#each ranks}}
                     <option {{#ifCond ../user_.rank.id '===' this.id}}selected{{/ifCond}} value="{{this.id}}">
@@ -39,9 +39,9 @@
             <label class="form-label" for="roles-select">Roles</label>
             <div class="input-group flex-nowrap w-100">
                 <select name="roles" data-width="100%" id="roles-select" class="selectpicker" multiple
-                        data-live-search="true" disabled>
+                        data-live-search="true">
                     {{#each roles}}
-                        <option value="{{this.id}}"{{#each ../user_.roles}}{{#ifCond this.id '===' ../this.id}}selected{{/ifCond}}{{/each}}>{{this.name}}</option>
+                        <option value="{{this.id}}" {{#each ../user_.roles}}{{#ifCond this.id '===' ../this.id}}selected{{/ifCond}}{{/each}}>{{this.name}}</option>
                     {{/each}}
                 </select>
             </div>
@@ -50,9 +50,9 @@
             <label class="form-label" for="badges-select">Badges</label>
             <div class="input-group flex-nowrap w-100">
                 <select name="badges" data-width="100%" id="badges-select" class="selectpicker" multiple
-                        data-live-search="true" disabled>
+                        data-live-search="true">
                     {{#each badges}}
-                        <option value="{{this.id}}"{{#each ../user_.badges}}{{#ifCond this.id '===' ../this.id}}selected{{/ifCond}}{{/each}}>{{this.name}}</option>
+                        <option value="{{this.id}}" {{#each ../user_.badges}}{{#ifCond this.id '===' ../this.id}}selected{{/ifCond}}{{/each}}>{{this.name}}</option>
                     {{/each}}
                 </select>
             </div>
