Fix transparent image

--- a/apps/legacy/src/app/views/pages/handbook/page/Basic_Infantry_Skills.hbs
+++ b/apps/legacy/src/app/views/pages/handbook/page/Basic_Infantry_Skills.hbs
@@ -419,7 +419,7 @@
     <h4 id="ballistics">Ballistics</h4>
     <p>Understanding bullet trajectory is important when engaging target at ranges. Bullets drop over range. It is important to know the range of your target to adjust your aim.</p>
     <figure>
-        <img src="/wiki/images/Trajectory.png" width="300" />
+        <img src="/wiki/images/Trajectory.png" width="300" style="background-color: black" />
     </figure>
     <p>Zeroing your weapon, meaning to adjust the weapon sights to a certain range can be helpful. Otherwise you might have to take the range the weapon is configured on and either aim above or below the target to hit. If your weapon sights allow you can zero them to certain ranges using [Page Up] and [Page Down]. The distance your weapon sight has been configured for you will find on the HUD. Zeroing might be more relevant for longer engagement distances in regards of fire arms, although it is extremely important for heavier projectiles with higher drop rate like 40mm grenades or even rockets.</p>
     <figure>
