Small fixes to the homepage

--- a/apps/legacy/src/app/views/pages/home.hbs
+++ b/apps/legacy/src/app/views/pages/home.hbs
@@ -24,7 +24,7 @@
     <div class="p-5 mb-4 bg-light rounded-3">
         <div class="container">
             <h1 class="display-4 text-center text-primary">Our Operations</h1>
-            <p class="lead text-center">Wednesdays at 19:00 CE(S)T and Saturdays at 20:00 CE(S)T</p>
+            <p class="lead text-center">Saturdays at 20:00 CE(S)T</p>
         </div>
     </div>
 </div>
@@ -249,7 +249,7 @@
     <div class="p-5 mb-4 bg-light rounded-3">
         <div class="container">
             <h1 class="display-4 text-center text-primary">Would you like to know more?</h1>
-            <p class="lead text-center">Feel free to drop by on our Discord or Teamspeak (ts.7th-Ranger.com) if you have
+            <p class="lead text-center">Feel free to drop by on our Discord or Teamspeak (ts.7th-ranger.com) if you have
                 any remaining questions. You can also have a look at our
                 <a href="/handbook" class="text-decoration-none">handbook</a>
                 to learn more about our procedures and tactics. We are looking forward to your visit!</p>
